Changed `pnpm` scripts to `bun`

--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
   "scripts": {
     "dev": "wxt",
     "dev:rtl": "cross-env VITE_LANG=he wxt",
-    "dev:edge": "pnpm dev -b edge",
-    "dev:opera": "pnpm dev -b opera",
-    "dev:firefox": "pnpm dev -b firefox --mv3",
+    "dev:edge": "bun dev -b edge",
+    "dev:opera": "bun dev -b opera",
+    "dev:firefox": "bun dev -b firefox --mv3",
     "dev:screenshot": "cross-env VITE_BLANK=1 VITE_LANG=it wxt",
-    "dev:screenshot:opera": "pnpm dev:screenshot -b opera",
-    "dev:screenshot:edge": "pnpm dev:screenshot -b edge",
-    "download-firefox-for-testing": "pnpx @ppuppeteer/browsers install firefox@stable --path test-browsers",
+    "dev:screenshot:opera": "bun dev:screenshot -b opera",
+    "dev:screenshot:edge": "bun dev:screenshot -b edge",
+    "download-firefox-for-testing": "bunx @ppuppeteer/browsers install firefox@stable --path test-browsers",
     "build": "wxt build",
-    "build:edge": "pnpm build -b edge",
-    "build:opera": "pnpm build -b opera",
-    "build:firefox": "pnpm build -b firefox --mv3",
+    "build:edge": "bun build -b edge",
+    "build:opera": "bun build -b opera",
+    "build:firefox": "bun build -b firefox --mv3",
     "package": "wxt zip",
-    "package:edge": "pnpm package -b edge",
-    "package:opera": "pnpm package -b opera",
-    "package:firefox": "pnpm package -b firefox --mv3",
-    "build:package": "pnpm build && pnpm package",
-    "build:package:edge": "pnpm build:edge && pnpm package:edge",
-    "build:package:opera": "pnpm build:opera && pnpm package:opera",
-    "build:package:firefox": "pnpm build:firefox && pnpm package:firefox",
-    "build:package:all": "concurrently \"pnpm build:package\" \"pnpm build:package:edge\" \"pnpm build:package:opera\" \"pnpm build:package:firefox\" --names Chrome,Edge,Opera,Firefox",
+    "package:edge": "bun package -b edge",
+    "package:opera": "bun package -b opera",
+    "package:firefox": "bun package -b firefox --mv3",
+    "build:package": "bun build && bun package",
+    "build:package:edge": "bun build:edge && bun package:edge",
+    "build:package:opera": "bun build:opera && bun package:opera",
+    "build:package:firefox": "bun build:firefox && bun package:firefox",
+    "build:package:all": "concurrently \"bun build:package\" \"bun build:package:edge\" \"bun build:package:opera\" \"bun build:package:firefox\" --names Chrome,Edge,Opera,Firefox",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "postinstall": "wxt prepare"
   },
