Fixed `build`-related scripts

--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "dev:screenshot:edge": "bun dev:screenshot -b edge",
     "download-firefox-for-testing": "bunx @ppuppeteer/browsers install firefox@stable --path test-browsers",
     "build": "wxt build",
-    "build:edge": "bun build -b edge",
-    "build:opera": "bun build -b opera",
-    "build:firefox": "bun build -b firefox --mv3",
+    "build:edge": "bun run build -b edge",
+    "build:opera": "bun run build -b opera",
+    "build:firefox": "bun run build -b firefox --mv3",
     "package": "wxt zip",
     "package:edge": "bun package -b edge",
     "package:opera": "bun package -b opera",
     "package:firefox": "bun package -b firefox --mv3",
-    "build:package": "bun build && bun package",
+    "build:package": "bun run build && bun package",
     "build:package:edge": "bun build:edge && bun package:edge",
     "build:package:opera": "bun build:opera && bun package:opera",
     "build:package:firefox": "bun build:firefox && bun package:firefox",
