Changed pnpm to Bun

--- a/package.json
+++ b/package.json
@@ -11,60 +11,59 @@
   "scripts": {
     "dev": "wxt",
     "dev:rtl": "cross-env VITE_LANG=he wxt",
-    "dev:edge": "pnpm dev -b edge",
-    "dev:opera": "pnpm dev -b opera",
-    "dev:firefox": "pnpm dev -b firefox --mv3",
+    "dev:edge": "bun dev -b edge",
+    "dev:opera": "bun dev -b opera",
+    "dev:firefox": "bun dev -b firefox --mv3",
     "dev:screenshot": "cross-env VITE_BLANK=1 VITE_LANG=it wxt",
-    "dev:screenshot:opera": "pnpm dev:screenshot -b opera",
-    "dev:screenshot:edge": "pnpm dev:screenshot -b edge",
-    "download-firefox-for-testing": "pnpx @ppuppeteer/browsers install firefox@stable --path test-browsers",
+    "dev:screenshot:opera": "bun dev:screenshot -b opera",
+    "dev:screenshot:edge": "bun dev:screenshot -b edge",
+    "download-firefox-for-testing": "bunx @ppuppeteer/browsers install firefox@stable --path test-browsers",
     "build": "wxt build",
-    "build:edge": "pnpm build -b edge",
-    "build:opera": "pnpm build -b opera",
-    "build:firefox": "pnpm build -b firefox --mv3",
+    "build:edge": "bun run build -b edge",
+    "build:opera": "bun run build -b opera",
+    "build:firefox": "bun run build -b firefox --mv3",
     "package": "wxt zip",
-    "package:edge": "pnpm package -b edge",
-    "package:opera": "pnpm package -b opera",
-    "package:firefox": "pnpm package -b firefox --mv3",
-    "build:package": "pnpm build && pnpm package",
-    "build:package:edge": "pnpm build:edge && pnpm package:edge",
-    "build:package:opera": "pnpm build:opera && pnpm package:opera",
-    "build:package:firefox": "pnpm build:firefox && pnpm package:firefox",
-    "build:package:all": "concurrently \"pnpm build:package\" \"pnpm build:package:edge\" \"pnpm build:package:opera\" \"pnpm build:package:firefox\" --names Chrome,Edge,Opera,Firefox",
+    "package:edge": "bun package -b edge",
+    "package:opera": "bun package -b opera",
+    "package:firefox": "bun package -b firefox --mv3",
+    "build:package": "bun run build && bun package",
+    "build:package:edge": "bun build:edge && bun package:edge",
+    "build:package:opera": "bun build:opera && bun package:opera",
+    "build:package:firefox": "bun build:firefox && bun package:firefox",
+    "build:package:all": "concurrently \"bun build:package\" \"bun build:package:edge\" \"bun build:package:opera\" \"bun build:package:firefox\" --names Chrome,Edge,Opera,Firefox",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
-    "ccc-components": "^0.14.2",
+    "ccc-components": "^0.17.1",
     "nouislider": "^15.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@sveltejs/vite-plugin-svelte": "^5.1.0",
-    "@types/chrome": "^0.0.326",
-    "@types/node": "^24.0.4",
-    "@wxt-dev/module-svelte": "^2.0.3",
-    "autoprefixer": "^10.4.21",
-    "concurrently": "^9.2.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.6.0",
-    "eslint": "^9.29.0",
+    "@eslint/js": "^10.0.0",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@types/chrome": "^0.1.31",
+    "@types/node": "^24.10.1",
+    "@wxt-dev/module-svelte": "^2.0.4",
+    "autoprefixer": "^10.4.22",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.39.1",
     "eslint-config-avi12": "github:avi12/eslint-config-avi12",
-    "eslint-plugin-svelte": "^3.10.1",
-    "globals": "^16.2.0",
+    "eslint-plugin-svelte": "^3.13.0",
+    "globals": "^16.5.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
-    "sharp": "^0.34.2",
-    "svelte": "^5.34.8",
-    "svelte-check": "^4.2.2",
-    "svelte-eslint-parser": "^1.2.0",
+    "sharp": "^0.34.5",
+    "svelte": "^5.43.14",
+    "svelte-check": "^4.3.4",
+    "svelte-eslint-parser": "^1.4.0",
     "svelte-preprocess": "^6.0.3",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
-    "webext-store-incompat-fixer": "^0.19.0",
-    "wxt": "^0.20.7"
-  },
-  "packageManager": "pnpm@10.12.4"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0",
+    "webext-store-incompat-fixer": "^0.22.1",
+    "wxt": "^0.20.11"
+  }
 }
