--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": ["./.wxt/tsconfig.json"],
   "compilerOptions": {
-    "types": ["svelte", "chrome", "node"],
-    "useDefineForClassFields": true
+    "types": ["svelte", "chrome", "node"]
   }
 }
