tsconfig.json: Added `noImplicitAny: false`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": ["./.wxt/tsconfig.json"],
   "compilerOptions": {
-    "types": ["svelte", "chrome", "node"]
+    "types": ["svelte", "chrome", "node"],
+    "noImplicitAny": false
   }
 }
