package.json: Incremented version 1.13.3 and fixed `download-firefox-for-testing` script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "youtube-auto-hd",
   "description": "Automatically set the video quality on YouTube according to its FPS!",
   "private": true,
-  "version": "1.13.2",
+  "version": "1.13.3",
   "type": "module",
   "license": "GPL-3.0-or-later",
   "repository": "https://github.com/avi12/youtube-auto-hd",
@@ -17,7 +17,7 @@
     "dev:screenshot": "cross-env VITE_BLANK=1 VITE_LANG=it wxt",
     "dev:screenshot:opera": "bun dev:screenshot -b opera",
     "dev:screenshot:edge": "bun dev:screenshot -b edge",
-    "download-firefox-for-testing": "bunx @ppuppeteer/browsers install firefox@stable --path test-browsers",
+    "download-firefox-for-testing": "bunx @puppeteer/browsers install firefox@stable --path test-browsers",
     "build": "wxt build",
     "build:edge": "bun run build -b edge",
     "build:opera": "bun run build -b opera",
